--- a/css/normalize.css
+++ b/css/normalize.css
@@ -42,6 +42,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+li::marker{list-style: none;}
+
 
 /* root */
 
@@ -103,4 +109,5 @@ table {
 
 /*********** common btn style  ***********/
 button {display: flex; width: 163px; height: 47px; background: #161616; border-radius: 300px; justify-content: center; align-items: center;}
+button a {display: flex; justify-content: center; align-items: center;}
 button a span {color: #ffffff; font-size: var(--fs-18);}
