--- a/css/normalize.css
+++ b/css/normalize.css
@@ -69,6 +69,7 @@ li::marker{list-style: none;}
   --fw-400: 400;
   --fw-500: 500;
   --fw-600: 600;
+  --fw-800: 800;
   --fw-title-name: 400;
   --fw-price: 600;
 
@@ -80,7 +81,7 @@ li::marker{list-style: none;}
   --fs-16: 1rem;
   --fs-18: 1.125rem;
   --fs-20: 1.25rem;
-  --fs-title: 1.8rem;
+  --fs-title: 3.125rem;
   --fs-button: 0.875rem;
   --fs-name: 1.25rem;
   --fs-small-text: 0.875rem;
@@ -104,10 +105,17 @@ li::marker{list-style: none;}
 
 /*********** common style  ***********/
 .wrapper {width: var(--ls-full); height: auto; overflow: hidden;}
-.container {width: var(--ls-full); height: auto; max-width: 1280px; margin: auto; padding: 0 var(--el-wide);}
-.section {width: var(--ls-full); height: auto; padding: var(--el-section) 0; }
+.container {width: var(--ls-full); height: auto; max-width: 1400px; margin: auto; padding: 0 var(--el-wide);}
+.section {width: var(--ls-full); height: 100vh; padding: var(--el-section) 0; }
+.left {position: absolute; width: 100%; height: auto;}
+.img {width: 46rem; height: 49.3rem; position: relative;}
+.img img {object-fit: cover; display: block; width: 100%; height: auto;}
 
 /*********** common btn style  ***********/
-button {display: flex; width: 163px; height: 47px; background: #161616; border-radius: 300px; justify-content: center; align-items: center;}
-button a {display: flex; justify-content: center; align-items: center;}
-button a span {color: #ffffff; font-size: var(--fs-18);}
+button {width: 163px; height: 47px; background: #161616; border-radius: 300px; margin: auto;  border: none;}
+button a {display: flex; justify-content: space-evenly; align-items: center;color: #ffffff; font-size: var(--fs-18);}
+
+/*********** common font style  ***********/
+h2 {font-size: var(--fs-title); font-weight: var(--fw-400); line-height: 70px;}
+h2:nth-child(2) {padding-bottom: 2rem;}
+h3 {font-size: var(--fs-20); font-weight: var(--fw-400); line-height: 30px; }
