--- a/css/normalize.css
+++ b/css/normalize.css
@@ -107,9 +107,8 @@ li::marker{list-style: none;}
 .wrapper {width: var(--ls-full); height: auto; overflow: hidden;}
 .container {width: var(--ls-full); height: auto; max-width: 1400px; margin: auto; padding: 0 var(--el-wide);}
 .section {width: var(--ls-full); height: 100vh; padding: var(--el-section) 0; }
-.left {position: absolute; width: 100%; height: auto;}
-.img {width: 46rem; height: 49.3rem; position: relative;}
 .img img {object-fit: cover; display: block; width: 100%; height: auto;}
+.frame {width: 320px; height: 670px; border-radius: 32px; border: 10px solid #ABA2DB; }
 
 /*********** common btn style  ***********/
 button {width: 163px; height: 47px; background: #161616; border-radius: 300px; margin: auto;  border: none;}
@@ -119,3 +118,35 @@ button a {display: flex; justify-content: space-evenly; align-items: center;colo
 h2 {font-size: var(--fs-title); font-weight: var(--fw-400); line-height: 70px;}
 h2:nth-child(2) {padding-bottom: 2rem;}
 h3 {font-size: var(--fs-20); font-weight: var(--fw-400); line-height: 30px; }
+
+/* common keyframe */
+@keyframes ani { /*위에서 아래로*/
+  from {
+    opacity: 0;
+    transform: translate(0, 70px);
+  }
+  to{
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+@keyframes ani1 { /*위에서 아래로 더 많이*/
+  from {
+    opacity: 0;
+    transform: translate(0, 500px);
+  }
+  to{
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+@keyframes bounce { /*커지게*/
+  0%{
+    transform: scale(0.1);
+    opacity:0;
+  }
+  100%{
+    transform:scale(1);
+    opacity: 1;
+  }
+}
