--- a/css/style.css
+++ b/css/style.css
@@ -3,29 +3,53 @@
 .header-wrapper {width: 100%; height: 90px; display: flex; align-items: center; justify-content: space-between;}
 
 /* Main Section Style */
-.main-section {background: #6349eb;}
-.main-section .left {color: #fff; top: 40vh;}
+.main-section {background: #6349eb; }
+.main-section .left {color: #fff; top: 40vh; position: absolute;}
 .main-section .left h2:nth-child(2) {font-weight: var(--fw-800);}
 
 .main-section .right {left: 48vw; top: 38vh; position: absolute; width: 100%; height: auto;}
+.main-section .right .img {width: 46rem; height: 49.3rem; position: relative;}
 .main-section .right .main-ani {position: absolute;}
 
-.main-section.active .left h2 {
-  animation-name: ani;
-  animation-duration: 2s;
-}
+.main-section.active .left h2
+ {
+  animation-name: bounce;
+  animation-duration: .8s;
+}  
 .main-section.active .left h3 {
-  animation: ani .36s 1.8s ease-in-out forwards, .36s ease-in-out forwards;
-  animation-duration: .18s;
+  animation-name: ani;
+  animation-duration: 1.3s;
+} 
+.main-section.active .right .img div:nth-child(2),
+.main-section.active .right .img div:nth-child(3)  {
+  animation-name: bounce;
+  animation-duration: 1.2s;
+}
+.main-section.active .right .img div:nth-child(1) {
+  animation-name: ani1;
+  animation-duration: 1s;
 }
 
-@keyframes ani {
-  from {
-    opacity: 0;
-    transform: translate(0, 20px);
-  }
-  to{
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
+/* Event Section Style */
+
+
+.event-section {background: #FAFAFD;}
+.event-section .container {position: relative; width: 100%; height: 100vh;}
+.event-section .left {position: absolute; width: 50%;color: #000; }
+.event-section .left h2:nth-child(2) {font-weight: var(--fw-800); color: #6349eb;}
+.event-section .left h3 {color: #636074; }
+
+.event-section .right {position: absolute; width: 50%; height: auto;}
+
+
+.event-section .right .img .circle {width: 600px; height: 600px; background: #FAFAFD; border-radius: 50%; }
+
+.event-section.active .left h2
+ {
+  animation-name: bounce;
+  animation-duration: .8s;
+}  
+.event-section.active .left h3 {
+  animation-name: ani;
+  animation-duration: 1.3s;
+} 
