--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
 
 /* Main Section Style */
 .main-section {background: #6349eb; }
-.main-section .left {color: #fff; top: 40vh; position: absolute;}
+.main-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
+.main-section .left {color: #fff; width: 50%; height: 100%; }
+.main-section .left .main-txts {position: absolute; top: 40%;}
 .main-section .left h2:nth-child(2) {font-weight: var(--fw-800);}
 
-.main-section .right {left: 48vw; top: 38vh; position: absolute; width: 100%; height: auto;}
-.main-section .right .img {width: 46rem; height: 49.3rem; position: relative;}
+.main-section .right {width: 50%; height: 100%;}
+.main-section .right .img {position: relative; top: 36%; }
 .main-section .right .main-ani {position: absolute;}
 
 .main-section.active .left h2
@@ -34,13 +36,14 @@
 
 
 .event-section {background: #FAFAFD;}
-.event-section .container {position: relative; width: 100%; height: 100vh;}
-.event-section .left {position: absolute; width: 50%;color: #000; }
+.event-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
+.event-section .left {width: 50%;color: #000; }
 .event-section .left h2:nth-child(2) {font-weight: var(--fw-800); color: #6349eb;}
 .event-section .left h3 {color: #636074; }
 
-.event-section .right {position: absolute; width: 50%; height: auto;}
-
+.event-section .right {width: 50%; height: 100%;}
+.event-section .right .img {width: 100%; position: relative; top: 20%; left: 20%;}
+.event-section .right .img .main-ani {position: absolute;}
 
 .event-section .right .img .circle {width: 600px; height: 600px; background: #FAFAFD; border-radius: 50%; }
 
