--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 .event-section .right {width: 50%; height: 100%;}
 .event-section .right .img {width: 100%; position: relative; top: 20%; left: 20%;}
 .event-section .right .img .main-ani {position: absolute;}
-.event-section .right .img .main-ani:nth-child(1) {z-index: 30; transform: translateX(50%)}
+.event-section .right .img .main-ani:nth-child(1) {z-index: 30; right: 27%;}
 .event-section .right .img .main-ani:nth-child(2) {z-index: 40;}
 .event-section .right .img::after {content: ""; width: 600px; height: 600px; background: #efecfd; border-radius: 50%; display: inline-block; margin: 30px 30px}
 
@@ -59,3 +59,11 @@
   animation-name: ani;
   animation-duration: 1.3s;
 } 
+.event-section.active .right .img div:nth-child(2){
+  animation-name: bounce;
+  animation-duration: 1.2s;
+}
+.event-section.active .right .img div:nth-child(1) {
+  animation-name: ani1;
+  animation-duration: 1s;
+}
