--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 /* header style */
 .header {width: 100%; height: auto; position: fixed; z-index: 1; top: 0; right: 0; left: 0;}
-.header-wrapper {width: 100%; height: 90px; display: flex; align-items: center; justify-content: space-between;}
+.header-wrapper {width: 100%; height: 9rem; display: flex; align-items: center; justify-content: space-between;}
 
 /* Main Section Style */
 .main-section {background: #6349eb; }
 .main-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
 .main-section .left {color: #fff; width: 50%; height: 100%; }
-.main-section .left .main-txts {position: absolute; top: 40%;}
+.main-section .left .main-txts {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-20%);}
 .main-section .left h2:nth-child(2) {font-weight: var(--fw-800);}
 
 .main-section .right {width: 50%; height: 100%;}
-.main-section .right .img {position: relative; top: 20%; left: 20%; }
+.main-section .right .img {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-20%);}
 .main-section .right .main-ani {position: absolute;}
 
 .main-section.active .left h2
@@ -33,22 +33,25 @@
 }
 
 /* Event Section Style */
-
-
 .event-section {background: #FAFAFD;}
 .event-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
-.event-section .left {width: 50%;color: #000; }
+.event-section .left {color: #000; width: 50%; height: 100%; }
+.event-section .left .main-txts {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-20%);}
 .event-section .left h2:nth-child(2) {font-weight: var(--fw-800); color: #6349eb;}
 .event-section .left h3 {color: #636074; }
 
-.event-section .right {width: 50%; height: 100%;}
-.event-section .right .img {width: 100%; position: relative; top: 20%; left: 20%;}
-.event-section .right .img .main-ani {position: absolute;}
-.event-section .right .img .main-ani:nth-child(1) {z-index: 30; right: 27%;}
-.event-section .right .img .main-ani:nth-child(2) {z-index: 40;}
-.event-section .right .img::after {content: ""; width: 600px; height: 600px; background: #efecfd; border-radius: 50%; display: inline-block; margin: 30px 30px}
+/* .event-section .right {width: 50%; height: 100%;}
+.event-section .right .img {width: 100%; height: 100%; position: relative;}
+.event-section .right .img .main-ani:nth-child(1) {position: absolute; left: 50%;top: 50%;transform: translate(-50%, -30%);}
+.event-section .right .img .main-ani:nth-child(2) {left: 50%;top: 50%;transform: translate(-50%, -30%);}
+.event-section .right .img .main-ani .frame {z-index: 20;}
+.event-section .right .img .main-ani .frame img {z-index: 20;}
+.event-section .right .img .main-ani .ani-box {position: absolute; z-index: 40; width: 610px; height: 610px;}
+.event-section .right .img::after {content: ""; width: 33rem; height: 33rem; background: #efecfd; border-radius: 50%; display: inline-block; } */
 
-/* .event-section .right .img .circle {} */
+.event-section .right {position: relative; width: 50%; height: 100%;}
+.event-section .right .coin {width: 33rem; height: 33rem; background: #efecfd; border-radius: 50%;}
+.event-section .right div {position: absolute;}
 
 .event-section.active .left h2
  {
@@ -59,11 +62,82 @@
   animation-name: ani;
   animation-duration: 1.3s;
 } 
-.event-section.active .right .img div:nth-child(2){
-  animation-name: bounce;
+/* .event-section.active .right .img div:nth-child(2){
+  animation-name: ;
   animation-duration: 1.2s;
 }
 .event-section.active .right .img div:nth-child(1) {
+  animation-name: ;
+  animation-duration: 1s;
+} */
+
+/* Content Section Style */
+.content-section {background: #FAFAFD;}
+.content-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
+.content-section .right {color: #000; width: 50%; height: 100%; }
+.content-section .right .main-txts {width: 100%; height: 100%; position: relative; top: 50%; left: 20%; transform: translateY(-20%);}
+.content-section .right h2:nth-child(2) {font-weight: var(--fw-800); color: #6349eb;}
+.content-section .right h3 {color: #636074; }
+
+.content-section .left {width: 50%; height: 100%;}
+.content-section .left .img {width: 100%; height: 100%; position: relative; top: 70%; left: 70%;transform: translate(-60%, -45%);}
+.content-section .left .img .main-ani .frame {position: absolute; z-index: 20;}
+.content-section .left .img .main-ani .frame img {z-index: 20;}
+.content-section .left .img .main-ani .ani-box {position: absolute; z-index: 40; width: 610px; height: 610px; top: 0%; left: -3%;}
+.content-section .left .img::after {content: ""; width: 33rem; height: 33rem; background: #efecfd; border-radius: 50%; display: inline-block; }
+
+
+
+.content-section.active .right h2
+ {
+  animation-name: bounce;
+  animation-duration: .8s;
+}  
+.content-section.active .right h3 {
+  animation-name: ani;
+  animation-duration: 1.3s;
+} 
+.content-section.active .left .img div:nth-child(2){
+  animation-name: bounce;
+  animation-duration: 1.2s;
+}
+.content-section.active .left .img div:nth-child(1) {
+  animation-name: ani1;
+  animation-duration: 1s;
+}
+
+
+/* Qr Section Style */
+.qr-section {background: #FAFAFD;}
+.qr-section .container {width: 100%; height: 100vh; display: flex; align-items: center;}
+.qr-section .left {color: #000; width: 50%; height: 100%; }
+.qr-section .left .main-txts {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-20%);}
+.qr-section .left h2:nth-child(2) {font-weight: var(--fw-800); color: #6349eb;}
+.qr-section .left h3 {color: #636074; }
+
+.qr-section .right {width: 50%; height: 100%;}
+.qr-section .right .img {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-30%);}
+.qr-section .right .img .main-ani {position: absolute;}
+.qr-section .right .img .main-ani:nth-child(1) {z-index: 30;
+width: 11rem;height: auto;left: 45%;top: 20%; transform: translate(-45%, -20%);}
+.qr-section .right .img .main-ani:nth-child(2) {z-index: 40;}
+.qr-section .right .img::after {content: ""; width: 33rem; height: 33rem; background: #efecfd; border-radius: 50%; display: inline-block; margin: 30px 30px}
+
+
+.qr-section.active .left h2
+ {
+  animation-name: bounce;
+  animation-duration: .8s;
+}  
+.qr-section.active .left h3 {
+  animation-name: ani;
+  animation-duration: 1.3s;
+} 
+.qr-section.active .right .img div:nth-child(2){
+  animation-name: bounce;
+  animation-duration: 1.2s;
+}
+.qr-section.active .right .img div:nth-child(1) {
   animation-name: ani1;
   animation-duration: 1s;
 }
