--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 .main-section .left h2:nth-child(2) {font-weight: var(--fw-800);}
 
 .main-section .right {width: 50%; height: 100%;}
-.main-section .right .img {width: 100%; height: 100%; position: relative; top: 50%; transform: translateY(-20%);}
+.main-section .right .img {width: 76.4rem; height: 79.2rem; position: relative; top: 50%; transform: translateY(-20%);}
 .main-section .right .main-ani {position: absolute;}
 
 .main-section.active .left h2
